--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<Title>An Empty web Page</Title>
+		<Title>My Empty web Page</Title>
 	</head>
 	<body>"
 		<H1 style = "color: Blue">This Web Page is Blank</H1>
