--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<Title>My Empty web Page</Title>
 	</head>
-	<body>"
-		<H1 style = "color: Blue">This Web Page is Blank</H1>
+	<body>
+		<H1>This Web Page is Blank</H1>
 		<h2>(Well, mostly blank, anyway!)</h2>
 	</body>
 
