Header 2 in index.html now in Purple

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>"
 		<H1 style = "color: Blue">This Web Page is Blank</H1>
-		<h2>(Well, mostly blank, anyway!)</h2>
+		<h2 style = "color: Purple">(Well, mostly blank, anyway!)</h2>
 	</body>
 
 </html>
