Added quote by Alexander pope

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<body>"
 		<H1 style = "color: Blue">This Web Page is Blank</H1>
 		<h2 style = "color: Purple">(Well, mostly blank, anyway!)</h2>
+		<ul>
+			<li> "Foll rush etc..." --Alexander Pope"</li>
+		</ul>
 	</body>
 
 </html>
