--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<Title>My Empty web Page</Title>
 	</head>
 	<body>"
-		<H1 style = "color: Blue">This Web Page is Blank</H1>
+		<H1 style = "color: Blue">A page of quotations</H1>
 		<h2 style = "color: Purple">(Well, mostly blank, anyway!)</h2>
 	</body>
 
