--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>"
 		<H1 style = "color: Blue">A page of quotations</H1>
-		<h2 style = "color: Purple">(Well, mostly blank, anyway!)</h2>
+		<h2 style = "color: Purple">... for your reading pleasure</h2>
 	</body>
 
 </html>
