--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<body>"
 		<H1 style = "color: Blue">A page of quotations</H1>
 		<h2 style = "color: Purple">... for your reading pleasure</h2>
+		<ul>
+			<li> "Live long and prosper" --Spock"</li>
+		</ul>
 	</body>
 
 </html>
