added Berra quote

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h2 style = "color: Purple">... for your reading pleasure</h2>
 		<ul>
 			<li> "Live long and prosper" --Spock"</li>
+			<li> "It ain't over till it is overr" --Berra"</li>
 		</ul>
 	</body>
 
