added B. Franklin quote

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 		<H1 style = "color: Blue">A page of quotations</H1>
 		<h2 style = "color: Purple">... for your reading pleasure</h2>
 		<ul>
-			<li> "Live long and prosper" --Spock"</li>
-			<li> "It ain't over till it is overr" --Berra"</li>
+			<li> "Live long and prosper" --Spock</li>
+			<li> "It ain't over till it is overr" --Berra</li>
+			<li> "Love ennemies for they tell you your faults" --B. Franklin</li>
 		</ul>
 	</body>
 
